--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 destination: ./_site
 auto:        true
 lsi:         false
+server_port: 4000
 pygments:    true
 markdown:    rdiscount
 permalink:   date
