--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /blog/:year/:month/:day/:title
 source: source
 destination: public
 plugins:
@@ -35,7 +35,7 @@ category_dir: blog/categories
 markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
-paginate: 10          # Posts per page on the blog index
-pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
-recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+# paginate: 10          # Posts per page on the blog index
+# pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
+# recent_posts: 5       # Posts in the sidebar Recent Posts section
+# excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
