--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /:year/:month/:day/:title
+permalink: /:title
 source: source
 destination: public
 plugins:
