--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
 code_dir:
 category_dir: blog/categories
 markdown: rdiscount
-pygments: false # default python pygments have been replaced by pygments.rb
+pygments: true
 
 # paginate: 10          # Posts per page on the blog index
 # pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
