--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://blog.yinwang.org
+url: http://www.yinwang.org/blog
 title: Yin Wang's Blog
 author: Yin Wang
 simple_search: http://google.com/search
