--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 root: /
-permalink: /blog/:year/:month/:day/:title
+permalink: /blog/cn/:year/:month/:day/:title
 markdown: rdiscount
 pygments: true
 date_format: "ordinal"
