--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # baseurl: http://yinwang.org
+site_url : http://creatist.cn/wangyin
 permalink: /:year/:month/:day/:title
 markdown: rdiscount
 pygments: true
